clusters/talos-robbinsdale/apps/tailscale/community/tclip/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tclip
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tclip
  template:
    metadata:
      labels:
        app: tclip
    spec:
      containers:
        - name: tclip
          image: ghcr.io/tailscale-dev/tclip:latest
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          volumeMounts:
            - name: data-volume
              mountPath: /data
      volumes:
        - name: data-volume
          persistentVolumeClaim:
            claimName: tclip-data-ceph
