clusters/talos-robbinsdale/apps/tailscale/community/tclip/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tclip
spec:
  selector:
    app: tclip
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  type: ClusterIP
