clusters/talos-robbinsdale/apps/tailscale/community/tclip/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tclip
  namespace: tailscale
  annotations:
    item.homer.rajsingh.info/name: "TClip"
    item.homer.rajsingh.info/subtitle: "Tailscale Clipboard"
    item.homer.rajsingh.info/logo: "https://raw.githubusercontent.com/walkxcode/dashboard-icons/main/svg/tailscale.svg"
    item.homer.rajsingh.info/tag: "utilities"
    item.homer.rajsingh.info/keywords: "tailscale, clipboard, sharing"

    service.homer.rajsingh.info/name: "Utilities"
    service.homer.rajsingh.info/icon: "fas fa-tools"
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: private
      namespace: home
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: ts
      namespace: home
  hostnames:
    - "tclip.rajsingh.info"
    - "tclip.${CLUSTER_DOMAIN}"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: tclip
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
